(lang dune 3.8)

(using melange 0.1)

(name shunn_cards)

(license "MIT")

(maintainers <Xavier Fujii>)

(authors <Xavier Fujii>)

(homepage https://github.com/xavier-fujii/shunn_cards)

(bug_reports https://github.com/xavier-fujii/shunn_cards/issues)

(package
 (allow_empty)
 (name shunn_cards)
 (synopsis "Melange project")
 (description "Web application for quickly creating anki cards"))
