opam-version: "2.0"
synopsis: "Melange project"
description: "Web application for quickly creating anki cards"
maintainer: ["Xavier Fujii"]
authors: ["Xavier Fujii"]
license: "MIT"
homepage: "https://github.com/xavier-fujii/shunn_cards"
bug-reports: "https://github.com/xavier-fujii/shunn_cards/issues"
depends: [
  "ocaml"
  "reason" {>= "3.10.0"}
  "dune" {>= "3.9"}
  "melange" {>= "2.0.0"}
  "reason-react" {>= "0.13.0"}
  "reason-react-ppx"
  "opam-check-npm-deps" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "ocaml-lsp-server" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "dot-merlin-reader" {with-test} # todo: use with-dev-setup once opam 2.2 is out
  "odoc" {with-doc}
]
dev-repo: "git+https://github.com/xavier-fujii/shunn_cards.git"
